refactor: create CI and centralize errors
refactor: change to main branch
