# modules/auth/delivery/http/dto/otp_request.go
@@ -5,8 +5,14 @@ package dto
 type OtpRequest struct {
 	// OTP number (required)
 	// required: true
-	// minimum: 6
+	// minimum: 0
 	// maximum: 6
 	// example: 123456
-	OTPNumber int64 `json:"otp" validate:"required,min=0,max=6"`
+	OTPNumber int64 `json:"otp" validate:"required"`
+}
+
+// OtpRequest represents OTP resend request
+// swagger:model OtpResendRequest
+type OtpResendRequest struct {
+	Username string `json:"username" validate"required"`
 }
